# android_studio_releases

./: Cargo.toml  README.md
src/: channel.rs  cli.rs  main.rs  parse.rs  release.rs  selectors.rs  url.rs
